removed background coloration

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>hgrahamcs</title>
 		<style>
-		body {background-color: slategrey;}
+		#body {background-color: slategrey;}
 		</style>
 	</head>
 
